--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "node-fetch": "^3.2.6"
+  },
+  "scripts": {
+    "build": "your-build-command-here"
   }
+
 }
